@@ -1,3 +1,4 @@
+2022-05-23: Prevent leak of index entries on corrupt data
 2022-05-23: Add checks for fragments part in case of corrupt data
 2022-05-17: Fix potential integer overflow with corrupt data
 2022-05-05: Fix: index entry label not being zero-terminated with corrupt input
